# ssl-checkup

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  TESTING.md  pyproject.toml  pytest.ini  setup.cfg  ssl_checkup.py  tox.ini
.github/workflows/: publish-uv.yml  test.yml
ssl_checkup/: __init__.py  cli.py  connection.py  display.py  engine.py  exceptions.py  formatting.py  main.py  parser.py
tests/: __init__.py  conftest.py  test_cli.py  test_connection.py  test_display.py  test_exceptions.py  test_formatting.py  test_integration.py  test_main.py
