[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssl-checkup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "termcolor>=3.1.0",
]

[project.scripts]
ssl-checkup = "ssl_checkup:main"
