[metadata]
name = ssl-checkup
version = 1.0.0
description = SSL certificate checker CLI tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Ralph Hittell
license = MIT
url = https://github.com/BaDxKaRMa/ssl-checkup

[options]
py_modules = ssl_checkup
python_requires = >=3.7
install_requires =
    termcolor

[options.entry_points]
console_scripts =
    ssl-checkup = ssl_checkup:main
